# pdfless

./: LICENSE  README.md  pyproject.toml
src/pdfless/application/translation/: languages_app.py  source_enum.py  translator.py  translator_app.py
src/pdfless/model/: pdf.py
tests/pdfless/application/translation/: test_languages.py  test_translator.py
tests/resources/translation/: res_supported_languages.txt
tests/utils/: file_test_utils.py
